--- a/RadiusR.API.CustomerWebService/packages.config
+++ b/RadiusR.API.CustomerWebService/packages.config
@@ -18,11 +18,11 @@
   <package id="RadiusR.Address.QueryInterface" version="1.0.1" targetFramework="net472" />
   <package id="RadiusR.API.AddressQueryAdapter" version="1.0.1" targetFramework="net472" />
   <package id="RadiusR.API.MobilExpress.DBAdapter" version="1.0.1" targetFramework="net472" />
-  <package id="RadiusR.DB" version="1.3.4" targetFramework="net472" />
+  <package id="RadiusR.DB" version="1.4.0" targetFramework="net472" />
   <package id="RadiusR.DB.DomainsCache" version="1.1.2" targetFramework="net472" />
   <package id="RadiusR.DB.TelekomOperations" version="1.1.1" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities" version="1.1.4" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.7" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities" version="1.1.5-alpha2" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.8-alpha1" targetFramework="net472" />
   <package id="RadiusR.FileManagement" version="1.1.6" targetFramework="net472" />
   <package id="RadiusR.Localization" version="1.0.8" targetFramework="net472" />
   <package id="RadiusR.Localization.Lists" version="1.0.12" targetFramework="net472" />
@@ -44,7 +44,7 @@
   <package id="RezaB.NetInvoice" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.NetInvoice.Wrapper" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.TurkTelekom.FTPOperations" version="1.1.2" targetFramework="net472" />
-  <package id="RezaB.TurkTelekom.WebServices" version="1.2.0" targetFramework="net472" />
+  <package id="RezaB.TurkTelekom.WebServices" version="1.2.1" targetFramework="net472" />
   <package id="RezaB.Web.VPOS" version="1.1.2" targetFramework="net472" />
   <package id="SSH.NET" version="2020.0.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
